fixing scrollbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,6 +68,28 @@
 ====================================================================
 
  ***/
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #3cc7c7; 
+  border-radius: 12px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #34a3a3; 
+}
+
+
 * {
   margin: 0px;
   padding: 0px;
